<resources>
    <string name="app_name">MuvTime</string>
    <string name="play">PLAY</string>
    <string name="app_splash_background">Application splash background</string>
    
    <!-- Exercises Screen -->
    <string name="choose_exercise">Let\'s Play!</string>
    <string name="jump_exercise">Jumping Fun</string>
    <string name="jump_exercise_description">Jump as high as you can! Can you reach the stars?</string>
    <string name="arm_circles_exercise_description">Make big circles with your arms! Let\'s get moving!</string>
    <string name="high_knees_exercise_description">Lift your knees up high! March like a champion!</string>
    <string name="side_reach_exercise_description">Reach to each side and stretch! Feel the amazing stretch!</string>
    <string name="jack_jumps_exercise_description">Jump and make a star! Spread your arms and legs wide!</string>
    <string name="biceps_curl_exercise_description">Curl your arms up towards your shoulders!</string>
    <string name="shoulder_press_exercise_description">Press your arms straight up above your head!</string>
    <string name="squat_exercise_description">Squat down and stand back up! Build strong legs!</string>
    <string name="tap_to_start">Tap to start the fun!</string>
    <string name="jump_exercise_image">Jump exercise image</string>
    
    <!-- Navigation -->
    <string name="nav_exercises">Exercises</string>
    <string name="nav_stats">Stats</string>
    
    <!-- Stats Screen -->
    <string name="your_stats">Your Progress</string>
    <string name="xp_earned">Experience Points</string>
    <string name="total_jumps">Total Jumps</string>
    <string name="exercises_completed">Exercises Completed</string>
    <string name="level">Level</string>
    <string name="next_level">Progress to Next Level</string>
    
    <!-- Exercise Stats -->
    <string name="jump_counter_stats">Jump Counter</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="more_exercises">More Exercises</string>
</resources>